// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly - some prefiltered rows 1`] = `
<div
  className="sc-bdfBQB gZhhqC"
>
  <input
    className="sc-gsTEea eQcJzg"
    onChange={[Function]}
    placeholder="Search 2 records..."
    value="f"
  />
</div>
`;

exports[`renders correctly 1`] = `
<div
  className="sc-bdfBQB gZhhqC"
>
  <input
    className="sc-gsTEea eQcJzg"
    onChange={[Function]}
    placeholder="Search 0 records..."
    value="filter"
  />
</div>
`;
